--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,34 @@
-/*Asterick*/
+/*Asterick wildcard selector to override default styles added by browser*/
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+/*General styles*/
+body{
+    min-height: 100vh;
+    display:flex;
+    flex-direction: column;
+    /*Generic project styles*/
+    color: #3a3a3a;
+}
+
+
+/*Header*/
 header {
     background-color: aliceblue;
 }
 
+/*Main Content*/
 main {
     background-color: blue;
+    /*Make main content take up rest of space*/
+    flex:1 0 auto;
 }
 
+/*Footer*/
 footer {
     background-color: blueviolet;
+    
 }
