--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,27 @@ footer {
     background-color: rgb(226, 43, 144);
     
 }
+
+/*media screen 768px and up*/
+@media screen and (min-width: 768px) {
+    /*Header*/
+    nav {
+       display: block;
+       position: relative;
+       box-shadow: none;
+       width: fit-content;
+       padding-right: 1rem;
+    }
+
+    #menu {
+        display:flex;
+    }
+
+    #menu li {
+        padding-left: 1rem;
+    }
+
+    .nav-toggle-label {
+        display:none;
+    }
+   }
